# Catalyst-quiz

./: README.md  netlify.toml
.github/workflows/: azure-deploy.yml  main_catalyst.yml
backend/: .dockerignore  .gitignore  Dockerfile  api-collection.postman.json  cloudinary_upload.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  models.py
backend/routes/: __init__.py  auth.py  student.py  teacher.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/code for bharat/: ForgotPassword.css  ForgotPassword.html  LandingPage.css  Login.css  Login.html  SingUp.css  SingUp.html  landingpage.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  config.ts  index.ts  student.ts  teacher.ts
frontend/src/assets/: index.ts
frontend/src/components/: FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  TestimonialsSection.tsx  app-sidebar.tsx  header.tsx  loading-indicator.tsx  mode-toogle.tsx  nav-main.tsx  nav-projects.tsx  nav-quick-actions.tsx  nav-stats.tsx  nav-user.tsx  navbar.tsx  not-found.tsx  private-route.tsx  public-route.tsx  student-bottom-bar.tsx  student-sidebar.tsx  teacher-bottom-bar.tsx  teacher-sidebar.tsx  team-switcher.tsx  theme-provider.tsx
frontend/src/components/sidbars/: StudentSidebar.tsx  TeacherSidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  select.tsx  sheet.tsx  sidebar.tsx
frontend/src/hooks/: useInitializeAuthStore.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Quiz.tsx  Quizzes.tsx  Register.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
frontend/src/pages/student/: Feedback.tsx  Profile.tsx  StudentFeedback.tsx  StudentProfile.tsx  StudentSubmissions.tsx  StudentTakeQuiz.tsx  StudentViewNotes.tsx  Submissions.tsx  TakeQuiz.tsx  ViewNotes.tsx
frontend/src/pages/teacher/: ClassRooms.tsx  Classroom.tsx  CreateQuiz.tsx  Evaluation.tsx  Feedback.tsx  MyQuizzes.tsx  Profile.tsx  Submissions.tsx  TeacherClassroom.tsx  TeacherCreateQuiz.tsx  TeacherEvaluation.tsx  TeacherFeedback.tsx  TeacherMyQuizzes.tsx  TeacherProfile.tsx  TeacherSubmissions.tsx  TeacherUploadNotes.tsx  TeacherViewQuiz.tsx  UploadNotes.tsx
frontend/src/routes/: AllRoutes.tsx
frontend/src/states/: auth.ts  loading.ts  quiz.ts  teacher.ts
frontend/src/styles/: home.css
frontend/src/types/: api.types.ts  auth.types.ts  routes.ts  teacher.types.ts
frontend/src/utils/: routeUtils.ts  validator.ts
