[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "sqlalchemy>=2.0.41",
    "flask-sqlalchemy>=3.1.1",
    "amqp>=5.3.1",
    "apscheduler>=3.11.0",
    "attrs>=25.3.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.4",
    "bidict>=0.23.1",
    "billiard>=4.2.1",
    "blinker>=1.9.0",
    "cachetools>=6.1.0",
    "celery>=5.5.3",
    "certifi>=2025.6.15",
    "charset-normalizer>=3.4.2",
    "cloudinary>=1.44.1",
    "disutils>=1.4.32.post2",
    "dotenv>=0.9.9",
    "flask-apscheduler>=1.13.1",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-sse>=1.0.0",
    "google>=3.0.0",
    "google-api-core>=1.16.0",
    "google-api-python-client>=1.8.4",
    "google-auth>=1.6.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=0.5.3",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.3",
    "gunicorn>=23.0.0",
    "h11>=0.16.0",
    "httplib2>=0.22.0",
    "humanize>=4.12.3",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "kombu>=5.5.4",
    "markupsafe>=3.0.2",
    "multidict>=6.6.1",
    "oauthlib>=3.3.1",
    "packaging>=25.0",
    "prometheus-client>=0.22.1",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.3.2",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "psycopg2-binary>=2.9.10",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-engineio>=4.12.2",
    "python-socketio>=5.13.0",
    "pytz>=2025.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "simple-websocket>=1.1.0",
    "six>=1.17.0",
    "soupsieve>=2.7",
    "tornado>=6.5.1",
    "typing-extensions>=4.14.0",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "uritemplate>=3.0.1",
    "urllib3>=2.5.0",
    "valkey>=6.1.0",
    "vine>=5.1.0",
    "wcwidth>=0.2.13",
    "werkzeug>=3.1.3",
    "wsproto>=1.2.0",
    "yarl>=1.20.1",
    "pyproject-toml>=0.1.0",
]
