[project]
name = "backend"
version = "0.1.0"
description = "Catalyst Quiz Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "python-dotenv>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "cloudinary>=1.44.1",
    "pyproject-toml>=0.1.0",
]
